--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -32,51 +32,50 @@
                 <% } %>
                     <h1>Points: <%= points %>
                     </h1>
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card" id="taskCard1">
+                        <div class="card-body" id="taskBody1">
                             <%= task1 %>
                         </div>
                         <span>
-                            <form method="post" action="/addPointDiet" style="display: inline">
+                            <form method="post" action="/addPointDiet" style="display: inline" id="doneForm1">
                                 <input type="text" name="task" value="<%= task1 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton1">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="1" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
-                                        src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
-                    <div class="card">
-                        <div class="card-body">
+                    
+                    <div class="card" id="taskCard2">
+                        <div class="card-body" id="taskBody2">
                             <%= task2 %>
                         </div>
                         <span>
-                            <form method="post" action="/addPointDiet" style="display: inline">
+                            <form method="post" action="/addPointDiet" style="display: inline" id="doneForm2">
                                 <input type="text" name="task" value="<%= task2 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton2">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="2" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
-                                        src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
-                    <div class="card">
-                        <div class="card-body">
+                    
+                    <div class="card" id="taskCard3">
+                        <div class="card-body" id="taskBody3">
                             <%= task3 %>
                         </div>
                         <span>
-                            <form method="post" action="/addPointDiet" style="display: inline">
+                            <form method="post" action="/addPointDiet" style="display: inline" id="doneForm3">
                                 <input type="text" name="task" value="<%= task3 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton3">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="3" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
-                                        src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
@@ -87,4 +86,5 @@
                 <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
               <% } %>
             </div>
+            <script src="../scripts/dietTasks.js"></script>
         <%- include("templates/footer") %>
