--- a/styles/body-motion-capture.css
+++ b/styles/body-motion-capture.css
@@ -1,15 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: black;
   }
 
-  /* #camera-feed {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin: 0;
-    padding: 0;
-  } */
 
   canvas {
     display: block;
@@ -17,5 +11,171 @@ body {
     height: 100%;
     object-fit: cover;
     margin: 0;
-    padding: 0;;
+    padding-bottom: 300px;;
   }
+
+  footer {
+    display: flex;
+    position: fixed;
+    bottom: -40px;
+    width: 100%;
+    height: 180px;
+    /* background-color: white; */
+}
+
+#home-weight {
+    height: 180px;
+    width: 260px;
+    background-color: white;
+    border-radius: 50px;
+}
+
+#home {
+    background-color: rgb(225, 225, 225);
+    width: 100px;
+    height: 100px;
+    border-radius: 40px;
+    position: absolute;
+    left: 20px;
+    bottom: 60px;
+    border-bottom: solid #FF8624;
+}
+
+#home-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#weight {
+    background-color: rgb(225, 225, 225);
+    width: 100px;
+    height: 100px;
+    border-radius: 40px;
+    position: absolute;
+    left: 140px;
+    bottom: 60px;
+    opacity: 0.6;
+}
+
+#weight-icon {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
+}
+
+#plus {
+    position: absolute;
+    left: 260px;
+    bottom: 120px;
+    background-color: #FF8624;
+    width: 120px;
+    height: 120px;
+    border-radius: 40px;
+}
+
+#plus-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#diet-user {
+    height: 180px;
+    width: 260px;
+    background-color: white;
+    border-radius: 50px;
+    position: absolute;
+    right: 0;
+    bottom: 0px;
+}
+
+#diet {
+    background-color: rgb(225, 225, 225);
+    width: 100px;
+    height: 100px;
+    border-radius: 40px;
+    position: absolute;
+    right: 140px;
+    bottom: 60px;
+    opacity: 0.6;
+}
+
+#diet-icon {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
+}
+
+#user {
+    background-color: rgb(225, 225, 225);
+    width: 100px;
+    height: 100px;
+    border-radius: 40px;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+    opacity: 0.6;
+}
+
+#user-icon {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
+}
+
+
+#fill {
+    position: absolute;
+    left: 250px;
+    bottom: 40px;
+    background-color: white;
+    width: 200px;
+    height: 70px;
+}
+
+#top-nav {
+  position: relative;
+  width: 640px;
+  margin-top: 50px;
+  padding-bottom: 40px;
+}
+
+#go-back {
+  position: absolute;
+  left: 20px;
+  top: 50px;
+  background-color: rgb(221, 218, 218);
+  opacity: 0.4;
+  border-radius: 40px;
+  width: 100px;
+  height: 100px;
+}
+
+#go-back-icon {
+  position: absolute;
+  left: 40px;
+  top: 70px;
+}
+
+#setting {
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  background-color: rgb(221, 218, 218);
+  opacity: 0.4;
+  border-radius: 40px;
+  width: 100px;
+  height: 100px;
+}
+
+#setting-icon {
+  position: absolute;
+  right: 40px;
+  top: 70px;
+}
