--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16pt;
+    /* background-color: #000000 ; */
 }
 
 nav {
@@ -464,7 +465,7 @@ footer {
 
 #hello-container {
     position: absolute;
-    top: 65%;
+    top: 50%;
     left: 20px;
     font-size: 18pt;
     width: 90%;
@@ -486,14 +487,14 @@ footer {
 #health-icon {
     position: absolute;
     left: 100px;
-    top: 90%;
+    top: 105%;
 }
 
 #health-metrics {
     font-size: 14pt;
     position: absolute;
     left: 130px;
-    bottom: -25px;
+    bottom: -40px;
 }
 
 #notification {
@@ -546,7 +547,9 @@ footer {
 .task-item {
     width: 100%;
     height: 100px;
-    background-color: #ececec;
+    /* background-color: #ececec; */
+    background-color: rgb(0, 0, 0);
+    color: white;
     font-size: 16pt;
     border-radius: 20px;
     margin-top: 15px;
