--- a/views/changeEmail.ejs
+++ b/views/changeEmail.ejs
@@ -15,8 +15,44 @@
                 <form action="/changeEmail" method="POST" class="index-form center">
                     <h1>New Email</h1>
                     <input type="email" name="email" placeholder="Email" required>
-                    <button type="submit" class="index-btn">Confirm</button>
+                    <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
                 </form>
                 <br>
     </div>
+
+    <script>
+        function confirmChange(event) {
+            event.preventDefault();
+            const modal = document.getElementById('confirmModal');
+            const modalContent = document.querySelector('.modal-content');
+
+            modal.style.display = 'block';
+            setTimeout(() => {
+                modal.classList.add('show');
+                modalContent.classList.add('show');
+            }, 10);
+
+            document.getElementById('confirmBtn').onclick = function () {
+                modalContent.classList.remove('show');
+                setTimeout(() => {
+                    event.target.closest('form').submit();
+                }, 500);
+            };
+
+            document.getElementById('cancelBtn').onclick = function () {
+                modalContent.classList.remove('show');
+                modal.style.display = 'none';
+            };
+        }
+    </script>
+
+    <!-- Confirmation Modal -->
+    <div id="confirmModal" class="modal">
+        <div class="modal-content">
+            <p>Are you sure you want to delete this post?</p>
+            <button id="confirmBtn">Yes</button>
+            <button id="cancelBtn">No</button>
+        </div>
+    </div>
+
     <%- include("templates/end") %>
