--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,20 +6,20 @@
 </div>
 
 <div class="login bg-light">
-
-  <!-- Go Back button -->
-  <button type="button" class="index-btn top-left" style="margin-left: 10px;" onclick="location.href='/';">
-    Go Back
-  </button>
-
   <br>
 
   <!-- Existing user/email pop-up message -->
   <% if (typeof errorMessage !== 'undefined' && errorMessage) { %>
     <div class="alert alert-danger" role="alert">
-      <%= errorMessage %>
+      <h1><%= errorMessage %></h1>
     </div>
   <% } %>
+
+  <!-- Go Back button -->
+				<button type="button" class="index-btn top-left" style="margin-left: 10px;"
+					onclick="location.href='/';">
+					Go Back
+				</button>
 
   <form action="/signup" method="POST" class="index-form center">
     <h1>Sign Up</h1>
