--- a/styles/aichat-log.css
+++ b/styles/aichat-log.css
@@ -44,12 +44,26 @@ body {
 #top-nav {
     position: fixed;
     top: 0;
-    background-color: white;
+    /* background-image: url('/img/wallpaper-header2.png'); */
+    /* background-size: cover; */
+    color: white;
+    font-weight: bold;
     width: 100%;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    height: 130px;
+    height: 300px;
     z-index: 1000;
+}
+
+#top-nav video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 #coach-info {
@@ -127,7 +141,7 @@ input {
     width: 60px;
     height: 60px;
     border-radius: 20px;
-    background-color: blue;
+    background-color: #FF8624;
     border: none;
 }
 
